deployment/k8s/neo4j/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: neo4j-http
  namespace: neo4j
spec:
  to:
    kind: Service
    name: neo4j
  port:
    targetPort: http
  tls:
    termination: edge
